# ZoloMedia

./: .gitignore  BIFROST_ZOLO_SYNTAX.md  PHASE1_COMPLETE.md  PHASE1_EMOJI_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_EMOJI_COMPLETE.md  PHASE3_EMOJI_COMPLETE.md  PHASE4_ZMD_COMPLETE.md  PHASE5_ZMD_COMPLETE.md  PHASE6_EMOJI_ACCESSIBILITY_COMPLETE.md  PLAN_EMOJI_ACCESSIBILITY.md  PLAN_ZMD_TERMINAL_ORCHESTRATOR.md  README.md  SESSION_NOTES.md  WIZARD_IF_CONDITIONAL_COMPLETE.md  ZLSP_COMMENT_FIX_COMPLETE.md  ZMD_TERMINAL_ORCHESTRATOR_COMPLETE.md  ZOLO_SYNTAX_HIGHLIGHTING.md  install-dev.py
zOS/: .gitignore  AGENT.md  AUDIT_LIST_DISPLAY_SYSTEM.md  CLEANUP_PLAN.md  CLI_GUIDE.md  LICENSE  LIST_REFACTORING_COMPLETE.md  MANIFEST.in  README.md  _PYPI_PUBLISHING_PLAN.md  __init__.py  paths.py  pyproject.toml  setup.py  version.py
zOS/Documentation/: AI_AGENT_GUIDE.md  BASICS_GUIDE.md  PLAN_DECLARATIVE_BREADCRUMB_PARENTS.md  zAuth_GUIDE.md  zBifrost_GUIDE.md  zCLI_GUIDE.md  zComm_GUIDE.md  zConfig_GUIDE.md  zConfig_HIERARCHY.md  zCrumbs_GUIDE.md  zData_GUIDE.md  zDialog_GUIDE.md  zDispatch_GUIDE.md  zDisplay_GUIDE.md  zFunc_GUIDE.md  zInstall_GUIDE.md  zLoader_GUIDE.md  zMigration_GUIDE.md  zNavigation_GUIDE.md  zOpen_GUIDE.md  zParser_GUIDE.md  zPhilosophy.md  zServer_GUIDE.md  zServer_zFunc_Routes_GUIDE.md  zShell_GUIDE.md  zUtils_GUIDE.md  zWalker_GUIDE.md
zOS/Documentation/docs/: ZMIGRATION_GUIDE.md
zOS/bifrost/: package-lock.json
zOS/bifrost/generators/: generate_prism_zolo.py
zOS/bifrost/src/: bifrost_client.js
zOS/bifrost/src/core/: message_handler.js
zOS/bifrost/src/managers/: widget_hook_manager.js
zOS/bifrost/src/rendering/: button_renderer.js  list_renderer.js  navigation_renderer.js  table_renderer.js  terminal_renderer.js  text_renderer.js  typography_renderer.js  wizard_conditional_renderer.js  zdisplay_orchestrator.js  zdisplay_renderer.js
zOS/bifrost/src/syntax/: prism-zolo.js
zOS/bifrost/src/utils/: container_utils.js  emoji_accessibility.js
zOS/cli/: __init__.py  cli_commands.py  interactive_editor.py  main.py  parser.py
zOS/core/: __init__.py  engine.py  main.py  version.py
zOS/core/L1_Foundation/a_zConfig/: zConfig.py
zOS/core/L1_Foundation/b_zComm/: __init__.py  zComm.py
zOS/core/L2_Core/c_zDisplay/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_ANALYSIS.md  PHASE4_COMPLETE.md  PHASE5_ANALYSIS.md  PHASE5_COMPLETE.md  ZDISPLAY_REFACTORING_PLAN.md  zDisplay.py
zOS/core/L2_Core/d_zAuth/: __init__.py  zAuth.py
zOS/core/L2_Core/e_zDispatch/: __init__.py  (+23 more)
zOS/core/Schemas/: zSchema.auth.yaml  zSchema.zMigration.yaml
zOS/core/UI/: zUI.zShell_help.yaml  zUI.zcli_sys.yaml
zOS/core/cli/: README.md  __init__.py  config_args.py  migrate_args.py  shell_args.py  uninstall_args.py  ztests_args.py
zOS/core/utils/: __init__.py
zOS/errors/: __init__.py  exceptions.py
zOS/formatting/: __init__.py  colors.py  terminal.py  zConfig.colors.zolo
zOS/install/: __init__.py  detection.py  removal.py
zOS/logger/: __init__.py  bootstrap.py  config.py  console.py  ecosystem.py
zOS/machine/: __init__.py  config.py
zOS/machine/detectors/: __init__.py  browser.py  hardware.py  ide.py  media_apps.py  shared.py  system.py
zOS/utils/: __init__.py  file_opener.py
zOS/utils/open/: __init__.py  core.py  files.py  helpers.py  urls.py
zOS/zTheme/: build.py
zlsp/: .coverage  .gitignore  ARCHITECTURE.md  DEPENDENCIES.md  DISTRIBUTION_PLAN.md  DISTRIBUTION_TEST_RESULTS.md  EXTRACTION_COMMANDS.sh  LINE_PARSERS_REFACTOR_PLAN.md  MANIFEST.in  MODULARIZATION_COMPLETE_GUIDE.md  MODULARIZATION_FINAL_STATUS.md  MODULARIZATION_STATUS.md  PARSER_MODULARIZATION_PLAN.md  PARSER_TRANSFORMATION_COMPLETE.md  PHASE_2.1_AUDIT.md  PHASE_2_1_COMPLETE.md  PHASE_2_5_PLAN.md  README.md  REFACTORING_FIXES.md  REFACTORING_PLAN.md  REORGANIZATION_COMPLETE.md  TESTING_PLAN.md  VIM_LSP_SETUP.md  pyproject.toml  setup.py
zlsp/Documentation/: ARCHITECTURE.md  CLI_GUIDE.md  FILE_TYPES.md  INSTALLATION.md  INTEGRATION_GUIDE.md  zSpark.md
zlsp/core/: README.md  __init__.py  cli.py  lsp_types.py  version.py
zlsp/core/parser/: __init__.py  parser.py  type_hints.py
zlsp/core/providers/: diagnostics_engine.py  hover_provider.py
zlsp/core/server/: lsp_server.py  semantic_tokenizer.py
zlsp/editors/: COMPREHENSIVE_AUDIT.md
zlsp/editors/cursor/: README.md  install.py
zlsp/editors/vim/: README.md  install.py
zlsp/editors/vscode/: README.md  install.py  uninstall.py
zlsp/examples/: LONG_CONTENT_UX_GUIDE.md  SCHEMA_SYNTAX_PATTERNS.md  advanced.zolo  check_tokens.py  env-color-preview.md  test_code_actions.zolo  test_indentation_fix.zolo  test_mixed.zolo  test_spaces.zolo  test_tabs.zolo  test_trailing_whitespace.zolo  zEnv.example.zolo  zSchema_comparison.prisma  zSchema_comparison.py  zSpark.example.zolo  zSpark.theme-preview.md  zSpark.validation-test.zolo  zSpark.zVaFile-validation.zolo
zlsp/examples/zSpecial/: zEnv.example.zolo  zTest.py  zUI.example.zolo  zUI.lists.zolo
zlsp/tests/: README.md  conftest.py
zlsp/tests/e2e/: test_lsp_server_lifecycle.py
zlsp/tests/integration/: test_code_actions_lsp.py  test_lsp_protocol.py  test_semantic_token_snapshots.py  test_special_files.py
zlsp/tests/unit/: test_block_tracker.py  test_code_action_executor.py  test_comment_processors.py  test_completion_registry.py  test_diagnostic_formatter.py  test_diagnostics_engine.py  test_documentation_registry.py  test_error_formatter.py  test_file_type_detector.py  test_hover_renderer.py  test_key_detector.py  test_lsp_server_handlers.py  test_multiline_collectors.py  test_parser.py  test_parser_api.py  test_semantic_tokenizer.py  test_serializer.py  test_token_emitters.py  test_type_hints.py  test_validators.py  test_value_validators.py
zlsp/themes/: __init__.py  zolo_default.yaml
zlsp/themes/generators/: vim.py  vscode.py
zlsp/zlsp/: __init__.py  lsp_types.py  parser.py  semantic_tokenizer.py
zlsp/zlsp/core/: README.md  __init__.py  lsp_types.py
zlsp/zlsp/editors/: __init__.py
zlsp/zlsp/themes/: zolo_default.yaml
zlsp/zlsp/vim/: README.md  install.py
(+313 files in other folders)
