[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zlsp"
dynamic = ["version"]
description = "Modern Language Server Protocol (LSP) for .zolo files with semantic highlighting, validation, and Vim integration"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT with Ethical Use Clause"}
authors = [
    {name = "Gal Nachshon", email = "hello@zolo.ai"}
]
maintainers = [
    {name = "Gal Nachshon", email = "hello@zolo.ai"}
]
keywords = [
    "zlsp",
    "zolo",
    "lsp",
    "language-server",
    "language-server-protocol",
    "parser",
    "semantic-highlighting",
    "vim",
    "neovim",
    "declarative",
    "configuration",
    "syntax-highlighting"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.0",
]

[project.scripts]
zlsp = "core.cli:main"
zolo-lsp = "core.server.lsp_server:main"
zlsp-vim-install = "editors.vim.install:main"
zlsp-vim-uninstall = "editors.vim.uninstall:main"
zlsp-vscode-install = "editors.vscode.install:main"
zlsp-vscode-uninstall = "editors.vscode.uninstall:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
themes = [
    "pyyaml>=6.0",  # Required for theme loading (optional feature)
]
all = [
    "zlsp[dev,themes]",
]

[project.urls]
Homepage = "https://github.com/ZoloAi/ZoloMedia"
Documentation = "https://github.com/ZoloAi/ZoloMedia/tree/main/zlsp"
Repository = "https://github.com/ZoloAi/ZoloMedia"
"Bug Tracker" = "https://github.com/ZoloAi/ZoloMedia/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "bindings*", "editors*", "themes*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
core = ["**/*"]
bindings = ["**/*"]
editors = ["**/*"]
themes = ["*.yaml", "generators/*.py"]

[tool.setuptools.data-files]
"share/zlsp/examples" = ["examples/*.zolo"]
"share/zlsp/docs" = ["Documentation/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov=bindings --cov-report=term-missing"
markers = [
    "slow: Slow tests that take significant time to run",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}
